add notes to explain each step

--- a/find_github_usernames.ipynb
+++ b/find_github_usernames.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['Name', 'User', 'Links']\n",
+      "['', '', '']\n",
       "['AlecMorgan', 'as6140', 'ZMBailey', 'rokaandy', 'AnnaLara', 'ConnorAnderson29', 'UpwardTrajectory', 'AlludedCrabb', 'jnawjux', 'kayschulz', 'kevintheduu', 'Laura-ShummonMaass', 'worldyne', 'glmack', 'mandoiwanaga', 'MIAISEMAN', 'nkacoroski', 'Patrickbfuller', 'sherzyang', 'Teosoft7', 'TSGreenwood', 'angrobanGit']\n"
      ]
     }
@@ -20,12 +22,26 @@
     "    reader = csv.reader(f)\n",
     "    data = list(reader)\n",
     "\n",
+    "    \n",
+    "#explore the first item\n",
+    "print(data[0])\n",
     "\n",
+    "#explore the second item\n",
+    "print(data[1])\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "#declare an empty list to hold the user names\n",
     "github_user_names = []\n",
     "\n",
+    "#loop through the data\n",
     "for user in range(len(data)):\n",
+    "    #get rid of things that aren't usernames\n",
     "    if data[user][1] != '' and data[user][1] != 'User':\n",
+    "        \n",
+    "        #then print the good names\n",
     "        github_user_names.append(data[user][1])\n",
+    "#print the end result\n",
     "print(github_user_names)"
    ]
   },
